Added some descriptions of SROIQ semantics

--- a/biblio.bib
+++ b/biblio.bib
@@ -1845,6 +1845,14 @@
   institution = {Free University of Bozen-Bolzano, Italy \& University of Geneva}
 }
 
+@unpublished{bernard2023making,
+  author      = {Roland Bernard and Oliver Kutz and Nicolas Troquard},
+  title       = {Making Axiom Weakening Work in $\mathcal{SROIQ}$},
+  year        = {2023},
+  note        = {unpublished},
+  institution = {Free University of Bozen-Bolzano, Italy}
+}
+
 @article{beckett2004rdf,
   title   = {RDF/XML syntax specification (revised)},
   author  = {Beckett, Dave and McBride, Brian},
