--- a/sections/a.front/biblio.tex
+++ b/sections/a.front/biblio.tex
@@ -21,6 +21,7 @@
 \nocite{motik2012profiles}
 \nocite{bao2012reference}
 \nocite{confalonieri2022irresistible}
+\nocite{bernard2023making}
 \nocite{marques2013minimal}
 \nocite{shchekotykhin2015mergexplain}
 \nocite{junker2004preferred}
