--- a/sections/b.main/2.background/5.weakening.tex
+++ b/sections/b.main/2.background/5.weakening.tex
@@ -21,7 +21,7 @@ We begin by giving the definition for subconcepts. We will immediately also exte
       \sub(\more n R.C) &= \{ \more n R.C \} \cup \sub(C) \enspace, &
       \sub(\less n R.C) &= \{ \less n R.C \} \cup \sub(C) \enspace, \\
       \sub(\exists R.\self) &= \{ \exists R.\self \} \enspace, &
-      \sub(\nominal i) &= \{ \nominal i \} \enspace.
+      \sub(\nominal a) &= \{ \nominal a \} \enspace.
     \end{align*}
   \end{widepage}
 \end{definition}
@@ -66,7 +66,7 @@ To additionally capture these omissions, we define generalization and specializa
   Using the abstract refinement operator $\zeta_{\refine,\corefine}$, we build two concrete refinement operators. The \emph{generalization operator} and \emph{specialization operator} are, respectively, defined as
   \begin{align*}
     \gamma_\Omc &= \zeta_{\UpC_\Omc,\DownC_\Omc} \enspace \text{and} \enspace
-    \rho_\Omc &= \zeta_{\DownC_\Omc,\UpC_\Omc} \enspace.
+    \rho_\Omc = \zeta_{\DownC_\Omc,\UpC_\Omc} \enspace.
   \end{align*}
 \end{definition}
 
