--- a/sections/b.main/3.theory/3.weakening.tex
+++ b/sections/b.main/3.theory/3.weakening.tex
@@ -51,7 +51,7 @@ To also address some of these omissions, we define generalization and specializa
     \zeta_{\refine,\corefine}(\exists R.C) ={} & \refine(\exists R.C) \cup \{ \exists R'.C \mid R' \in \zeta_{\refine,\corefine}(R) \}
     \cup \{ \exists R.C' \mid C' \in \zeta_{\refine,\corefine}(C) \} \enspace, \\
     & \text{\SROIQ concepts:} \\
-    \zeta_{\refine,\corefine}(\nominal i) ={} & \refine(\nominal i) \enspace, \\
+    \zeta_{\refine,\corefine}(\nominal a) ={} & \refine(\nominal a) \enspace, \\
     \zeta_{\refine,\corefine}(\exists R.\self) ={} & \refine(\exists R.\self) \cup \{ \exists R'.\self \mid R' \in \zeta_{\refine,\corefine}(R) \} \enspace, \\
     \zeta_{\refine,\corefine}(\more n R.C) ={} & \refine(\more n R.C) \cup \{ \more n R'.C \mid R' \in \zeta_{\refine,\corefine}(R) \} \\
     & \cup \{ \more n R.C' \mid C' \in \zeta_{\refine,\corefine}(C) \}
@@ -89,15 +89,15 @@ Revisiting the case in \Cref{exa:up-cover} we observe that $\gamma_{\Omc,\Omc}(C
   \item \ref{lem:generalisation}.\enspace \textbf{generalization and specialization:\enspace}
   We first observe that by definition, if $X \in \UpC_{\Omcref,\Omcfull}(Y)$ then $Y \sqsubseteq_\Omcref X$ must hold. Likewise, it follows from the definition that if $X \in \DownC_{\Omcref,\Omcfull}(X)$ then $X \sqsubseteq_\Omcref Y$. For an integer $n$, the upward cover contains only values greater or equal to $n$, while the downward cover contains only values less or equal $n$. We proceed with a proof by structural induction. We will show the proof for the generalization operator, the proof for the specialization operator can be approached analogously.
   \begin{itemize}
-    \item For $Y \in N_C \cup \Lmc(N_R) \cup \{ \nominal i \mid i \in N_I \} \cup \{ \top, \bot \}$ the generalization operator is equivalent to a simple application of the upwards cover and $Y \sqsubseteq_\Omcref X$ holds.
-    \item For $Y = \lnot C$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\lnot C)^I$ that $a \not\in C^I$. By our inductive hypothesis we know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$. It follows that $a \not\in C'^I$ and therefore $a \in (\lnot C')^I$. We conclude that $(\lnot C)^I \subseteq (\lnot C')^I$ in every model $I$ of $\Omcref$ and consequently $\lnot C \sqsubseteq_\Omcref \lnot C'$.
-    \item For $Y = C \sqcap D$, given any model $I$ of $\Omcref$, we know for all elements $a \in (C \sqcap D)^I$ that $a \in C^I$ and $a \in D^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $a \in C'^I$ and $a \in D'^I$, therefore $a \in (C' \sqcap D)^I$ and $a \in (C \sqcap D')^I$. We conclude that $(C \sqcap D)^I \subseteq (C' \sqcap D)^I$ and $(C \sqcap D)^I \subseteq (C \sqcap D')^I$ in every model $I$ of $\Omcref$ and consequently $C \sqcap D \sqsubseteq_\Omcref C' \sqcap D$ and $C \sqcap D \sqsubseteq_\Omcref C \sqcap D'$.
-    \item For $Y = C \sqcup D$, given any model $I$ of $\Omcref$, we know for all elements $a \in (C \sqcup D)^I$ that $a \in C^I \cup D^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $a \in C'^I \cup D^I$ and $a \in C^I \cup D'^I$, therefore $a \in (C' \sqcup D)^I$ and $a \in (C \sqcup D')^I$. We conclude that $(C \sqcup D)^I \subseteq (C' \sqcup D)^I$ and $(C \sqcup D)^I \subseteq (C \sqcup D')^I$ in every model $I$ of $\Omcref$ and consequently, $C \sqcup D \sqsubseteq_\Omcref C' \sqcup D$ and $C \sqcup D \sqsubseteq_\Omcref C \sqcup D'$.
-    \item For $Y = \forall R.C$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\forall R.C)^I$ that for all $b$ such that $\langle a, b \rangle \in R^I$, $b \in C^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that $R'^I \subseteq R^I$, so there are no new candidates for $b$. We further know that for all elements $b \in C^I$, $b \in C'^I$. We conclude that $a \in (\forall R'.C)^I$ and $a \in (\forall R.C')^I$. Therefore, $\forall R.C \sqsubseteq_\Omcref \forall R'.C$ and $\forall R.C \sqsubseteq_\Omcref \forall R.C'$.
-    \item For $Y = \exists R.C$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\exists R.C)^I$ there exists a $b$ such that $\langle a, b \rangle \in R^I$ and $b \in C^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle a, b \rangle \in R'^I$ and $b \in C'^I$. We conclude that $a \in (\exists R'.C)^I$ and $a \in (\exists R.C')^I$. Hence, $\exists R.C \sqsubseteq_\Omcref \exists R'.C$ and $\exists R.C \sqsubseteq_\Omcref \exists R.C'$.
-    \item For $Y = \exists R.\self$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\exists R.\self)^I$, $\langle a, a \rangle \in R^I$. By our inductive hypothesis we know that $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle a, a \rangle \in R'^I$. We conclude that $a \in (\exists R'.\self)^I$ and thus, $\exists R.\self \sqsubseteq_\Omcref \exists R'.C\self$.
-    \item For $Y ={} \more n R.C$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\more n R.C)^I$ there exist at least $n$ elements $b_1, \dots, b_n$ such that $\langle a, b_i \rangle \in R^I$ and $b_i \in C^I$ for $i = 1, \dots, n$. Since there are at least $n$ such elements, there are also at least $k \leq n$, meaning $\more n R.C \sqsubseteq_\Omcref \more k R.C$. By our inductive hypothesis we also know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle a, b_i \rangle \in R'^I$ and $b_i \in C'^I$ for $i = 1, \dots, n$. We conclude that $a \in (\more n R'.C)^I$ and $a \in (\more n R.C')^I$. Hence, $\more n R.C \sqsubseteq_\Omcref \more n R'.C$ and $\more n R.C \sqsubseteq_\Omcref \more n R.C'$.
-    \item For $Y ={} \less n R.C$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\less n R.C)^I$ there exist at most $n$ elements $b_1, \dots, b_n$ such that $\langle a, b_i \rangle \in R^I$ and $b_i \in C^I$ for $i = 1, \dots, n$. Since there are at most $n$ such elements, there are also at most $k \geq n$, meaning $\less n R.C \sqsubseteq_\Omcref \less k R.C$. By our inductive hypothesis we also know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that there exist no other $b \not\in \{ b_1, \dots, b_n \}$ such that $\langle a, b \rangle \in R'^I$ and $b \in C$, or $\langle a, b \rangle \in R^I$ and $b \in C'^I$. We conclude that there are still at most $n$ such elements, hence, $a \in (\less n R'.C)^I$ and $a \in (\less n R.C')^I$. Therefore, $\less n R.C \sqsubseteq_\Omcref \less n R'.C$ and $\less n R.C \sqsubseteq_\Omcref \less n R.C'$.
+    \item For $Y \in N_C \cup \Lmc(N_R) \cup \{ \nominal a \mid a \in N_I \} \cup \{ \top, \bot \}$ the generalization operator is equivalent to a simple application of the upwards cover and $Y \sqsubseteq_\Omcref X$ holds.
+    \item For $Y = \lnot C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\lnot C)^I$ that $\delta \not\in C^I$. By our inductive hypothesis we know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$. It follows that $\delta \not\in C'^I$ and therefore $\delta \in (\lnot C')^I$. We conclude that $(\lnot C)^I \subseteq (\lnot C')^I$ in every model $I$ of $\Omcref$ and consequently $\lnot C \sqsubseteq_\Omcref \lnot C'$.
+    \item For $Y = C \sqcap D$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (C \sqcap D)^I$ that $\delta \in C^I$ and $\delta \in D^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $\delta \in C'^I$ and $\delta \in D'^I$, therefore $\delta \in (C' \sqcap D)^I$ and $\delta \in (C \sqcap D')^I$. We conclude that $(C \sqcap D)^I \subseteq (C' \sqcap D)^I$ and $(C \sqcap D)^I \subseteq (C \sqcap D')^I$ in every model $I$ of $\Omcref$ and consequently $C \sqcap D \sqsubseteq_\Omcref C' \sqcap D$ and $C \sqcap D \sqsubseteq_\Omcref C \sqcap D'$.
+    \item For $Y = C \sqcup D$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (C \sqcup D)^I$ that $\delta \in C^I \cup D^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $\delta \in C'^I \cup D^I$ and $\delta \in C^I \cup D'^I$, therefore $\delta \in (C' \sqcup D)^I$ and $\delta \in (C \sqcup D')^I$. We conclude that $(C \sqcup D)^I \subseteq (C' \sqcup D)^I$ and $(C \sqcup D)^I \subseteq (C \sqcup D')^I$ in every model $I$ of $\Omcref$ and consequently, $C \sqcup D \sqsubseteq_\Omcref C' \sqcup D$ and $C \sqcup D \sqsubseteq_\Omcref C \sqcup D'$.
+    \item For $Y = \forall R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\forall R.C)^I$ that for all $\delta'$ such that $\langle \delta, \delta' \rangle \in R^I$, $\delta' \in C^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that $R'^I \subseteq R^I$, so there are no new candidates for $\delta'$. We further know that for all elements $\delta' \in C^I$, $\delta' \in C'^I$. We conclude that $\delta \in (\forall R'.C)^I$ and $\delta \in (\forall R.C')^I$. Therefore, $\forall R.C \sqsubseteq_\Omcref \forall R'.C$ and $\forall R.C \sqsubseteq_\Omcref \forall R.C'$.
+    \item For $Y = \exists R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\exists R.C)^I$ there exists a $\delta'$ such that $\langle \delta, \delta' \rangle \in R^I$ and $\delta' \in C^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle \delta, \delta' \rangle \in R'^I$ and $\delta' \in C'^I$. We conclude that $\delta \in (\exists R'.C)^I$ and $\delta \in (\exists R.C')^I$. Hence, $\exists R.C \sqsubseteq_\Omcref \exists R'.C$ and $\exists R.C \sqsubseteq_\Omcref \exists R.C'$.
+    \item For $Y = \exists R.\self$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\exists R.\self)^I$, $\langle \delta, a \rangle \in R^I$. By our inductive hypothesis we know that $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle \delta, \delta \rangle \in R'^I$. We conclude that $\delta \in (\exists R'.\self)^I$ and thus, $\exists R.\self \sqsubseteq_\Omcref \exists R'.C\self$.
+    \item For $Y ={} \more n R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\more n R.C)^I$ there exist at least $n$ elements $\delta_1, \dots, \delta_n$ such that $\langle \delta, \delta_i \rangle \in R^I$ and $\delta_i \in C^I$ for $i = 1, \dots, n$. Since there are at least $n$ such elements, there are also at least $k \leq n$, meaning $\more n R.C \sqsubseteq_\Omcref \more k R.C$. By our inductive hypothesis we also know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle \delta, \delta_i \rangle \in R'^I$ and $\delta_i \in C'^I$ for $i = 1, \dots, n$. We conclude that $\delta \in (\more n R'.C)^I$ and $\delta \in (\more n R.C')^I$. Hence, $\more n R.C \sqsubseteq_\Omcref \more n R'.C$ and $\more n R.C \sqsubseteq_\Omcref \more n R.C'$.
+    \item For $Y ={} \less n R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\less n R.C)^I$ there exist at most $n$ elements $\delta_1, \dots, \delta_n$ such that $\langle \delta, \delta_i \rangle \in R^I$ and $\delta_i \in C^I$ for $i = 1, \dots, n$. Since there are at most $n$ such elements, there are also at most $k \geq n$, meaning $\less n R.C \sqsubseteq_\Omcref \less k R.C$. By our inductive hypothesis we also know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that there exist no other $\delta' \not\in \{ \delta_1, \dots, \delta_n \}$ such that $\langle \delta, \delta' \rangle \in R'^I$ and $\delta' \in C$, or $\langle \delta, \delta' \rangle \in R^I$ and $\delta' \in C'^I$. We conclude that there are still at most $n$ such elements, hence, $\delta \in (\less n R'.C)^I$ and $\delta \in (\less n R.C')^I$. Therefore, $\less n R.C \sqsubseteq_\Omcref \less n R'.C$ and $\less n R.C \sqsubseteq_\Omcref \less n R.C'$.
   \end{itemize}
 \end{proof}
 
@@ -113,7 +113,7 @@ Using the specialization and generalization operators, we can now define the \em
     g_{\Omcref,\Omcfull}(R(a, b)) ={} & \{ R'(a, b) \mid R' \in \gamma_{\Omcref,\Omcfull}(R) \} \cup \{ R(a, b), \bot \sqsubseteq \top \} \enspace, \\
     g_{\Omcref,\Omcfull}(\lnot R(a, b)) ={} & \{ \lnot R'(a, b) \mid R' \in \rho_{\Omcref,\Omcfull}(R) \} \cup \{ \lnot R(a, b), \bot \sqsubseteq \top \} \enspace, \\
     g_{\Omcref,\Omcfull}(a = b) ={} & \{ a = b, \bot \sqsubseteq \top \} \enspace, \\
-    \quad g_{\Omcref,\Omcfull}(a \not= b) ={} & \{ a \not= b, \bot \sqsubseteq \top \} \enspace, \\
+    g_{\Omcref,\Omcfull}(a \not= b) ={} & \{ a \not= b, \bot \sqsubseteq \top \} \enspace, \\
     g_{\Omcref,\Omcfull}(\disjoint(R, S)) ={} & \{ \disjoint(R', S) \mid R' \in \rho_{\Omcref,\Omcfull} (R) \} \\
     & \cup \{ \disjoint(R, S') \mid S' \in \rho_{\Omcref,\Omcfull}(S) \} \\
     & \cup \{ \disjoint (R, S), \bot \sqsubseteq \top \} \enspace, \\
