--- a/sections/c.back/a.sroiq/2.sroiq-sem.tex
+++ b/sections/c.back/a.sroiq/2.sroiq-sem.tex
@@ -10,7 +10,7 @@ An interpretation maps the universal role $U$ to $U^I = \Delta^I \times \Delta^I
 \begin{itemize}
   \item The top concept is true for every individual in the domain, therefore $\top^I = \Delta^I$.
   \item The bottom concept is true for no individual, hence $\bot^I = \empty$ where $\empty$ represents the empty set.
-  \item Nominal concepts contain exactly the specified individuals, that is $\{ i \}^I = \{ i^I \}$.
+  \item Nominal concepts contain exactly the specified individuals, that is $\{ a \}^I = \{ a^I \}$.
   \item $\lnot C$ yields the complement of the extension of $C$, thus $(\lnot C)^I = \Delta^I \setminus C^I$.
   \item $C \sqcup D$ denotes all individuals that are in either the extension of $C$ or in that of $D$, hence $(C \sqcup D)^I = C^I \cup D^I$.
   \item $C \sqcap D$ on the other hand, denotes all elements of the domain that are in the extension of both $C$ and $D$, which can be expressed as $(C \sqcap D)^I = C^I \cap D^I$.
