--- a/sections/b.main/2.background/1.sroiq.tex
+++ b/sections/b.main/2.background/1.sroiq.tex
@@ -13,9 +13,9 @@ The syntax of \SROIQ is based on a \emph{vocabulary} of three finite disjoint se
 \begin{alignat*}{2}
   R, S &::={} && U \mid r \mid r^{-} \enspace,\\
   C &::= && \bot \mid \top \mid A \mid \neg C \mid C \sqcap C \mid C \sqcup C \mid \forall R.C \mid \exists R.C \mid \\ 
-  &&& \more n S.C \mid \less n S.C \mid \exists S.\self \mid \nominal i \enspace,
+  &&& \more n S.C \mid \less n S.C \mid \exists S.\self \mid \nominal a \enspace,
 \end{alignat*}
-where $A \in N_C$ is a concept name, $r \in N_R$ is a role name, $i \in N_I$ is an individual name and $n \in \mathbb{N}_0$ is a non-negative integer. 
+where $A \in N_C$ is a concept name, $r \in N_R$ is a role name, $a \in N_I$ is an individual name and $n \in \mathbb{N}_0$ is a non-negative integer. 
 %
 $U$ is the universal role. $S$ is a \emph{simple role} in the RBox $\Rmc$ (see below). In the following, $\Lmc(N_C, N_R, N_I)$ and $\Lmc(N_R) = N_R \cup \{U\} \cup \{r^- \mid r \in N_R\}$ denote, respectively, the set of concepts and roles that can be built over $N_C$, $N_R$, and $N_I$ in \SROIQ.
 
@@ -52,9 +52,41 @@ A \SROIQ  ontology $\Omc = \Tmc \cup \Amc \cup \Rmc$ consists of a TBox $\Tmc$, 
 
 % describe the semantics
 % whats a interpretation, when is it a model
-The semantics of \SROIQ is defined using \emph{interpretations} $I = \langle \Delta^I, \cdot^I \rangle$, where $\Delta^I$ is a non-empty \emph{domain} and $\cdot^I$ is a function associating to each individual name $a$ an element of the domain $a^I \in \Delta^I$, to each concept $C$ a subset of the domain $C^I \subseteq \Delta^I$, and to each role $R$ a binary relation on the domain $R^I \subseteq \Delta^I \times \Delta^I$. An interpretation $I$ is a \emph{model} for $\Omc$ if it satisfies all the axioms in $\Omc$.
-
-% TODO
+The semantics of \SROIQ is defined using \emph{interpretations} $I = \langle \Delta^I, \cdot^I \rangle$, where $\Delta^I$ is a non-empty \emph{domain} and $\cdot^I$ is a function associating to each individual name $a$ an element of the domain $a^I \in \Delta^I$, to each concept $C$ a subset of the domain $C^I \subseteq \Delta^I$, and to each role $R$ a binary relation on the domain $R^I \subseteq \Delta^I \times \Delta^I$. The interpretation function $\cdot^I$ is extended to the interpretation of complex roles and concepts such that
+\begin{align*}
+  U^I &= \Delta^I \times \Delta^I \enspace, &
+  \top^I &= \Delta^I \enspace, &
+  \bot^I &= \emptyset \enspace, &
+  \nominal{a}^I &= \{ a^I \} \enspace,
+\end{align*}
+\vspace{-9mm}
+\begin{align*}
+  (\lnot C)^I &= \Delta^I \setminus C^I \enspace, &
+  (C \sqcap D)^I &= C^I \cap D^I \enspace, &
+  (C \sqcup D)^I &= C^I \cup D^I \enspace,
+\end{align*} 
+\vspace{-9mm}
+\begin{align*}
+  (r^-)^I &= \{ \langle \gamma_2, \gamma_1 \rangle \mid \langle \gamma_1, \gamma_2 \rangle \in r^I \} \enspace, \\
+  (\forall R.C)^I &= \{ \gamma \in \Delta^I \mid \forall \gamma' \in \Delta^I : \langle \gamma, \gamma' \rangle \in R^I \implies \gamma' \in C^I \} \enspace, \\
+  (\exists R.C)^I &= \{ \gamma \in \Delta^I \mid \exists \gamma' \in \Delta^I : \langle \gamma, \gamma' \rangle \in R^I \text{ and } \gamma' \in C^I \} \enspace, \\
+  (\less n {R.C})^I &= \{ \gamma \in \Delta^I \mid \left| \{ \gamma' \in \Delta^I \mid \langle \gamma, \gamma' \rangle \in R^I \text{ and } \gamma' \in C^I \} \right| \leq n \} \enspace, \\
+  (\more n {R.C})^I &= \{ \gamma \in \Delta^I \mid \left| \{ \gamma' \in \Delta^I \mid \langle \gamma, \gamma' \rangle \in R^I \text{ and } \gamma' \in C^I \} \right| \geq n \} \enspace, \\
+  (\exists R.\self)^I &= \{ \gamma \in \Delta^I \mid \langle \gamma, \gamma \rangle \in  \} \enspace,
+\end{align*}
+where $|X|$ is the cardinality of a set $X$.
+An interpretation $I$ is a \emph{model} for $\Omc$, written $I \models \Omc$, if it satisfies all the axioms in $\Omc$. Whether the interpretation $I$ satisfies the axiom $\alpha$, written $I \models \alpha$, is given by
+\begin{align*}
+  I \models C \sqsubseteq D &\iff C^I \subseteq D^I \enspace, &
+  I \models R(a, b) &\iff \langle a^I, b^I \rangle \in R^I \enspace,\\
+  I \models C(a) &\iff a^I \in C^I \enspace, &
+  I \models \lnot R(a, b) &\iff \langle a^I, b^I \rangle \not\in R^I \enspace, \\
+  I \models a = b &\iff a^I = b^I \enspace, &
+  I \models \disjoint(R, S) &\iff R^I \cap S^I = \emptyset \enspace, \\
+  I \models a \not= b &\iff a^I \not= b^I \enspace, &
+  I \models S_1 \circ \cdots \circ S_n \sqsubseteq R &\iff S_1^I \circ \cdots \circ S_n^I \subseteq R^I \enspace,
+\end{align*}
+where $\circ$ denotes the composition of relations, that is, $r \circ s = \{ \langle x, y \rangle \mid \exists z : \langle x, z \rangle \in r \text{ and } \langle z, y \rangle \in s \}$.
 
 % describe subsumptions of concepts and roles
 Given two concepts $C$ and $D$ we say that $C$ is \emph{subsumed} by $D$ (or $D$ \emph{subsumes} $C$) with respect to the ontology $\Omc$, written $C \sqsubseteq_\Omc D$, if $C^I \subseteq D^I$ in every model $I$ of $\Omc$. Further, $C$ is \emph{strictly subsumed by} $D$, written $C \sqsubset_\Omc D$, if $C \sqsubseteq_\Omc D$ but not $D \sqsubseteq_\Omc C$. Analogously, given two roles $R$ and $S$, $R$ is subsumed by $S$ with respect to $\Omc$ ($R \sqsubseteq_\Omc S$) if $R^I \sqsubseteq S^I$ in all models $I$ of $\Omc$. Again, $R \sqsubset_\Omc S$ holds if $R \sqsubseteq_\Omc S$ but not $D \sqsubseteq_\Omc C$.
