--- a/sections/c.back/f.eval.tex
+++ b/sections/c.back/f.eval.tex
@@ -309,3 +309,14 @@
   \end{widepage}
   \caption{Distribution of execution time required for repairing using axiom weakening by ontology. Attempts that failed by timeout were not considered.}
 \end{figure}
+
+% TODO: add timings for enhance (table + 6 figures: steps, calls, time, for each mean and distribution)
+% TODO: add complete quality table
+% TODO: add quality for enhance w.r.t mcs (2 figures)
+% TODO: add 2 complete quality figure 6 rows (each comparison)
+% TODO: add table + (4) figures with sizes of inferred set
+% TODO: add extended complete quality table
+% TODO: add extended quality for weakening w.r.t. mcs, weakening w.r.t. removal, enhance w.r.t mcs (2 figures each)
+% TODO: add extended 2 complete quality figure 6 rows (each comparison)
+% TODO: add extended table + (4) figures with sizes of inferred set
+% TODO: remove those that are already in the main section
